[tool.poetry]
name = "grai_actions"
version = "0.1.1"
description = ""
authors = ["Grai <ian@grai.io>"]
license = "Elastic-2.0"
readme = "Readme.md"
packages = [{include = "grai_actions", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
grai-graph = "^0.1.4"
ghapi = "^1.0.3"
grai-client = "^0.1.16"
pydantic = "^1.10.4"

[tool.poetry.scripts]
grai-actions = "grai_actions.main:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
black = "^22.12.0"
isort = "^5.11.4"
grai-source-dbt = "^0.0.6"
grai-source-flat-file = "^0.0.4"

[tool.isort]
profile = "black"
known_first_party = "grai_actions"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
